# ScandyCoreQtExample

./: .gitignore  CMakeLists.txt  README.md  ScandyCoreQtExample.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ScandyQtExample/: CMakeLists.txt  ScandyQtExample.pro  mainwindow.cpp  mainwindow.ui
dependencies/: README.md
